--- a/templates/doctor-registration.html
+++ b/templates/doctor-registration.html
@@ -1,38 +1,29 @@
-{% extends 'base.html' %}
-{% block title %} Catherapy {% endblock %}
+{% extends 'base.html' %} {% block title %} Catherapy {% endblock %} {% block
+body %}
+<h1>Doctor Registration</h1>
 
-{% block body %}
-    <h1> Doctor Registration</h1>
+<form action="/doctor-registration-submit" method="POST">
+  <p>Email <input type="text" name="email" /></p>
+  <p>Password <input type="password" name="password" /></p>
+  <p>First Name <input type="text" name="first_name" /></p>
+  <p>Last Name <input type="text" name="last_name" /></p>
+  <p>Phone <input type="text" name="phone" /></p>
+  <p>Address <input type="text" name="address" /></p>
+  <p>Photo <input type="text" name="photo_url" /></p>
 
-    <form action="/doctor-registration-submit" method="POST">
-        <p> Email <input type="text" name="email">
-        </p>
-        <p> Password <input type="password" name="password">
-        </p>
-        <p> First Name <input type="text" name="first_name">
-        </p>
-        <p> Last Name <input type="text" name="last_name">
-        </p>
-        <p> Phone <input type="text" name="phone">
-        </p>
-        <p> Address <input type="text" name="address">
-        </p>
-        <p> Photo <input type="text" name="photo_url">
-        </p>
+  <label for="gender">Choose a gender:</label>
+  <select name="gender" id="gender">
+    <option value="male">Male</option>
+    <option value="female">Female</option>
+    <option value="other">Other</option>
+  </select>
 
-        <p><label for="bio">Please describe yourself</label></p>
-        <textarea id="bio" name="bio" rows="4" cols="50"> </textarea>
+  <p><label for="bio">Please describe yourself</label></p>
+  <textarea id="bio" name="bio" rows="4" cols="50"> </textarea>
 
-{% with messages = get_flashed_messages() %} 
-    {% if messages %}
-        {% for message in messages %}
-            {{ message }}
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-        <p> <input type="submit">
-        </p> 
-
-    </form>
+  {% with messages = get_flashed_messages() %} {% if messages %} {% for message
+  in messages %} {{ message }} {% endfor %} {% endif %} {% endwith %}
+  <p><input type="submit" /></p>
+</form>
 
 {% endblock %}
