--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,24 +1,19 @@
 {% extends "base.html" %}
 
-<head> 
-    <title> Homepage</title>
+<head>
+  <title>Homepage</title>
 </head>
 
-{% block body %}
-
-{% if doctor %}
+{% block body %} {% if doctor %}
 <h1>Welcome {{doctor.first_name}}</h1>
 
-<form action="/logout" method="POST"> 
-<p> <input type="submit">
-</p>
-
+<form action="/logout" method="POST">
+  <p><input type="submit" /></p>
 </form>
 <a href="/doctor-availability"> Update Availability</a>
 
 {% elif patient %}
 
-<h1> Welcome {{patient.first_name}}</h1>
-{% endif %}
-
-{% endblock %}
+<h1>Welcome {{patient.first_name}}</h1>
+<a href="/search"> Search for a Specialist</a>
+{% endif %} {% endblock %}
