Update doctors profile implemented

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -10,7 +10,7 @@
 <form action="/logout" method="POST">
   <p><input type="submit" /></p>
 </form>
-<a href="/doctor-availability"> Update Availability</a>
+<a href="/update-doctor-profile"> Edit Profile</a>
 
 {% elif patient %}
 
