fetching search result data

--- a/templates/update-doctor-profile.html
+++ b/templates/update-doctor-profile.html
@@ -15,7 +15,7 @@ body %}
           value="{{time}}"
         />
 
-        {{time.strftime('%A, ')}} {{time.strftime('%I:%M %p')}}
+        {{time.strftime('%A, ')}} {{time.strftime('%I:%M')}}
       </td>
       {% endfor %}
     </tr>
