Welcome page stylized

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,34 +1,14 @@
 <!doctype html>
 <html>
   <head>
-    <style>
-      table.GeneratedTable {
-        width: 10%;
-        background-color: #ffffff;
-        border-collapse: collapse;
-        border-width: 2px;
-        border-color: #ffe47a;
-        border-style: solid;
-        color: #000000;
-      }
-      
-      table.GeneratedTable td, table.GeneratedTable th {
-        border-width: 1px;
-        border-color: #ffe47a;
-        border-style: solid;
-        padding: 1px;
-      }
-      
-      table.GeneratedTable thead {
-        background-color: #eed677;
-      }
-      </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>
       {% block title %}{% endblock %}
     </title>
-
+  
     {% block head %}
     
     {% endblock %}
