--- a/static/style.css
+++ b/static/style.css
@@ -1,1 +1,20 @@
+html, body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .map,
+  #map-id {
+    width: 500px;
+    height: 500px;
+  }
 
+
+  #searchresults {
+    height : 500px;
+    
+
+
+
+  }
