--- a/templates/doctor-registration.html
+++ b/templates/doctor-registration.html
@@ -1,15 +1,30 @@
-{% extends 'base.html' %} {% block title %} Catherapy {% endblock %} {% block
+{% extends 'base.html' %} 
+{% block title %} Catherapy {% endblock %}
+{% block head %}<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css%22%3E">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link rel="stylesheet" href="../static/css/styles.css">  
+{%endblock %}
+
+
+{% block
 body %}
 <h1>Doctor Registration</h1>
 
-<form action="/doctor-registration-submit" method="POST">
-  <p>Email <input type="text" name="email" /></p>
-  <p>Password <input type="password" name="password" /></p>
-  <p>First Name <input type="text" name="first_name" /></p>
-  <p>Last Name <input type="text" name="last_name" /></p>
-  <p>Phone <input type="text" name="phone" /></p>
-  <p>Address <input type="text" name="address" /></p>
-  <p>Photo <input type="text" name="photo_url" /></p>
+<div class="col-md-3">
+<form class="form-group" action="/doctor-registration-submit" method="POST" enctype="multipart/form-data">
+  <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control"name="email" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" name="password" id="exampleInputPassword1">
+    <label for="fname">First Name</label>
+    <input type="text" class="form-control" name="first_name" id="fname">
+    <label for="lname">Last Name</label>
+    <input type="text" class="form-control" name="last_name" id="lname">
+    <label for="phone1">Phone</label>
+    <input type="text" class="form-control" name="phone" id="phone1">
+    <label for="address1">Address</label>
+    <input type="text" class="form-control" name="address" id="address1">
+  <p>Photo <input type="file" name="file_input"/></p>
 
   <label for="gender">Choose a gender:</label>
   <select name="gender" id="gender">
@@ -19,11 +34,12 @@ body %}
   </select>
 
   <p><label for="bio">Please describe yourself</label></p>
-  <textarea id="bio" name="bio" rows="4" cols="50"> </textarea>
+  <textarea id="bio" class="form-control" name="bio" rows="4" cols="50"> </textarea>
 
   {% with messages = get_flashed_messages() %} {% if messages %} {% for message
   in messages %} {{ message }} {% endfor %} {% endif %} {% endwith %}
   <p><input type="submit" /></p>
 </form>
+</div>
 
 {% endblock %}
