--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,57 +1,36 @@
 {% extends "base.html" %}
+{% block head %}<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css%22%3E">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link rel="stylesheet" href="../static/css/styles.css">  
+{%endblock %}
 
-<head>
-  <title>Homepage</title>
-</head>
 
 {% block body %}
 
-{% if doctor %}
-<nav class="navbar navbar-light" style="background-color: #922e00e8;">
-  <a class="navbar-brand" href="#">
-    <img src="../static/img/logo.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
-    Catherapy
-  </a>
-  
-  
-  <a class="nav-link" href="/update-doctor-profile"> Edit Profile</a>
-
-  <form action="/doc-logout" method="POST" class="form-inline">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Logout</button>
-  </form>
-</nav>
-
-<div class="ms-3">
-    <h1>Welcome {{doctor.first_name}}</h1>
-
-    <div id="doc-appt">
-      {% if doctor.appointments %}
-      <h3> Your Upcoming Appointments</h3>
-      {% for appointment in doctor.appointments %}
-      <form action="/doctor-delete-appointment" method="POST">
-        <input type="hidden" name="patient_id" value="{{appointment.patient.patient_id}}">
-        <input type="hidden" name="selected_datetime" value="{{appointment.datetime}}">
-        <p>{{appointment.datetime}}</p>
-        <p>{{appointment.patient.first_name}}</p>
-        <button type="submit" class="btn btn-primary">Cancel Appointment</button>
-      </form>
-      {% endfor %}
-      {% endif %}
-    </div>
-
-    {% elif patient %}
-    <nav class="navbar navbar-light" style="background-color: #ad4e22e8;">
+    {% if patient %}
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">
         <img src="../static/img/logo.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
         Catherapy
       </a>
-      <a class="nav-link" href="/search"> Search for a Specialist</a>
-      <a class="nav-link" href="/mood-tracker"> Mood Tracker</a>
-      <form action="/patient-logout" method="POST" class="form-inline">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Logout</button>
-      </form>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="/search">Search</a>
+              <a class="dropdown-item" href="/mood-tracker">Mood Tracker</a>
+              <a class="dropdown-item" name="/patient-logout" href="/patient-logout"><strong>Log Out</strong></a>
+            </div>
+          </li>
+        </ul>
+      </div>
     </nav>
-  </div>
+
 
   <div class="ms-3">
   <h1>Welcome {{patient.first_name}}</h1>
@@ -107,31 +86,6 @@
         <input type="radio" class="btn-check" name="feeling_rating" value="4" id="btnradio4" autocomplete="off">
         <label class="btn btn-outline-primary" for="btnradio4">😞</label>
       </div>
-      <!-- <input
-        type="radio"
-        name="feeling_rating"
-        value="1"
-      />
-      😀
-      <input
-      type="radio"
-      name="feeling_rating"
-      value="2"
-    />
-    🤪
-    <input
-      type="radio"
-      name="feeling_rating"
-      value="3"
-    />
-    🤬
-    <input
-      type="radio"
-      name="feeling_rating"
-      value="2"
-    />
-    😞 -->
-
     <p><label for="feeling_comment">Would you like to add a comment?</label></p>
     <textarea name="feeling_comment" rows="4" cols="50"> </textarea>
       <div>
@@ -143,5 +97,8 @@
 </div>
 </div>
 {% endif %}
+<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+<script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
 <script src="https://kit.fontawesome.com/54fd98ac47.js" crossorigin="anonymous"></script>
 {% endblock %}
