--- a/templates/update-doctor-profile.html
+++ b/templates/update-doctor-profile.html
@@ -1,5 +1,31 @@
-{% extends "base.html" %} {% block title %} Catherapy {% endblock %} {% block
-body %}
+{% extends "base.html" %} 
+
+{% block title %} Catherapy
+ {% endblock %}
+
+ {% block body %}
+ <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/homepage">
+    <img src="../static/img/logo.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
+    Catherapy
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="/update-doctor-profile"> Edit Profile</a>
+          <a class="dropdown-item" name="/doc-logout" href="/doc-logout"><strong>Log Out</strong></a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav>
 
 <form action="/update-doctor-profile-submit" method="post">
   <h2>Select your availability</h2>
