btn emoji fixed. About page completed.

--- a/static/style.css
+++ b/static/style.css
@@ -14,7 +14,10 @@ html, body {
   #searchresults {
     height : 500px;
     
+  }
 
+  .bg-image {
 
-
+    background-repeat: repeat-x;
+    background-size: cover;
   }
