--- a/templates/doctor-registration.html
+++ b/templates/doctor-registration.html
@@ -2,7 +2,7 @@
 {% block title %} Catherapy {% endblock %}
 {% block head %}<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css%22%3E">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link rel="stylesheet" href="../static/css/styles.css">  
+<link rel="stylesheet" href="../static/style.css">  
 {%endblock %}
 
 
