--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,105 +1,113 @@
 {% extends "base.html" %}
-{% block head %}<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css%22%3E">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link rel="stylesheet" href="../static/css/styles.css">  
-{%endblock %}
 
+{% block head %}
+
+{% endblock %}
 
 {% block body %}
-
-
-    {% if patient %}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">
-        <img src="../static/img/logo.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
-        Catherapy
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="/search">Search</a>
-              <a class="dropdown-item" href="/mood-tracker">Mood Tracker</a>
-              <a class="dropdown-item" name="/patient-logout" href="/patient-logout"><strong>Log Out</strong></a>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-
-  <div class="ms-3">
-  <h1>Welcome {{patient.first_name}}</h1>
-
-  <div id="patient-appt">
-    {% if patient.appointments %}
-    {% for appointment in patient.appointments %}
-    
-    <form action="/patient-delete-appointment" method="POST">
-      <div class="card mb-3" style="max-width: 600px;">
-        <div class="row no-gutters">
-          <div class="col-md-4 my-auto">
-            <img src="{{appointment.doctor.photo_url}}"  class="card-img ms-2" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Your next Pawsome appointment info</h5>
-              <ul class="list-group">
-                <li class="list-group-item"><i class="fa-regular fa-calendar fa-fw me-4"></i>Date: {{appointment.datetime.strftime('%a %b %d')}} </li>
-                <li class="list-group-item"><i class="fa-regular fa-clock fa-fw me-4"></i>Time: {{appointment.datetime.strftime('%I:%M %p')}} </li>
-                <li class="list-group-item"><i class="fa-solid fa-map-pin fa-fw me-4"></i>Where: {{appointment.doctor.address}}</li>
-                <li class="list-group-item"><i class="fa-regular fa-user fa-fw me-4"></i>With: {{appointment.doctor.first_name}} {{appointment.doctor.last_name}}</li>
-              </ul>
-              <button type="submit" class="btn btn-primary mt-2" style="background-color: hsla(39, 91%, 57%, 0.973);">Cancel Appointment</button>
-              </div>
-            </div>
+{% if patient %}
+<style>
+  body {
+    background-image: url('../static/img/cats-main.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+</style>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">
+    Catherapy
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="/search">Search</a>
+          <a class="dropdown-item" href="/mood-tracker">Mood Tracker</a>
+          <a class="dropdown-item" name="/patient-logout" href="/patient-logout"><strong>Log Out</strong></a>
         </div>
-      </div>
-
-      <input type="hidden" name="doctor_id" value="{{appointment.doctor.doctor_id}}">
-      <input type="hidden" name="selected_datetime" value="{{appointment.datetime}}">
-
-
-    </form>
-    {% endfor %}
-    {% endif %}
+      </li>
+    </ul>
   </div>
-
+</nav>
+<div class="row">
+  <div class="col-md-6">
+<div class="ms-3">
+  <h1>Welcome {{patient.first_name}}</h1>
   {% if not has_patient_submitted_feeling_today %}
-  <div id="patient-feelings">
-    <H3>How are you feeling today?</H3>
-    <form action="/add-patient-feeling-submit" method="post">
-      <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-        <input type="radio" class="btn-check" name="feeling_rating" value="1" id="btnradio1" autocomplete="off">
-        <label class="btn btn-outline-primary" for="btnradio1">😀</label>
-      
-        <input type="radio" class="btn-check" name="feeling_rating" value="2" id="btnradio2" autocomplete="off">
-        <label class="btn btn-outline-primary" for="btnradio2">🤪</label>
-      
-        <input type="radio" class="btn-check" name="feeling_rating" value="3" id="btnradio3" autocomplete="off">
-        <label class="btn btn-outline-primary" for="btnradio3">🤬</label>
+  <H3>How are you feeling today?</H3>
+  <form action="/add-patient-feeling-submit" method="post">
+    <div class="btn-group" role="group">
+      <input type="radio" class="btn-check" name="feeling_rating" value="1" id="btnradio1" autocomplete="off">
+      <label class="btn btn-outline-primary" for="btnradio1">😀</label>
 
-        <input type="radio" class="btn-check" name="feeling_rating" value="4" id="btnradio4" autocomplete="off">
-        <label class="btn btn-outline-primary" for="btnradio4">😞</label>
-      </div>
-    <p><label for="feeling_comment">Would you like to add a comment?</label></p>
-    <textarea name="feeling_comment" rows="4" cols="50"> </textarea>
-      <div>
-        <button type="submit">Submit</button>
-      </div>
-    </form>
-  </div>
+      <input type="radio" class="btn-check" name="feeling_rating" value="2" id="btnradio2" autocomplete="off">
+      <label class="btn btn-outline-primary" for="btnradio2">🤪</label>
+
+      <input type="radio" class="btn-check" name="feeling_rating" value="3" id="btnradio3" autocomplete="off">
+      <label class="btn btn-outline-primary" for="btnradio3">🤬</label>
+
+      <input type="radio" class="btn-check" name="feeling_rating" value="4" id="btnradio4" autocomplete="off">
+      <label class="btn btn-outline-primary" for="btnradio4">😞</label>
+    </div>
+    <div>
+      <button type="submit" class="btn btn-primary mt-1">Submit</button>
+    </div>
+  </form>
   {% endif %}
 </div>
 </div>
+
+<div class="col-md-6">
+<div id="patient-appt">
+
+
+  {% if patient.appointments %}
+  {% for appointment in patient.appointments %}
+
+  <form action="/patient-delete-appointment" method="POST">
+    <div class="card mb-3" style="max-width: 600px;">
+      <div class="row no-gutters">
+        <div class="col-md-4 my-auto">
+          <img src="{{appointment.doctor.photo_url}}" class="card-img ms-2" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Your next Pawsome appointment info</h5>
+            <ul class="list-group">
+              <li class="list-group-item"><i class="fa-regular fa-calendar fa-fw me-4"></i>Date:
+                {{appointment.datetime.strftime('%a %b %d')}} </li>
+              <li class="list-group-item"><i class="fa-regular fa-clock fa-fw me-4"></i>Time:
+                {{appointment.datetime.strftime('%I:%M %p')}} </li>
+              <li class="list-group-item"><i class="fa-solid fa-map-pin fa-fw me-4"></i>Where:
+                {{appointment.doctor.address}}</li>
+              <li class="list-group-item"><i class="fa-regular fa-user fa-fw me-4"></i>With:
+                {{appointment.doctor.first_name}} {{appointment.doctor.last_name}}</li>
+            </ul>
+            <button type="submit" class="btn btn-primary mt-2" style="background-color :hsla(0, 11%, 7%, 0.992);">Cancel
+              Appointment</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <input type="hidden" name="doctor_id" value="{{appointment.doctor.doctor_id}}">
+    <input type="hidden" name="selected_datetime" value="{{appointment.datetime}}">
+
+
+  </form>
+</div>
+  {% endfor %}
+  {% endif %}
+</div>
+</div>
+
+</div>
 {% endif %}
-<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-<script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
-<script src="https://kit.fontawesome.com/54fd98ac47.js" crossorigin="anonymous"></script>
 {% endblock %}
