--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,63 +8,110 @@
 {% if patient %}
 <style>
   body {
-    background-image: url('../static/img/cats-main.jpg');
+    background-image: url('../static/img/cat-home.jpg');
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+  .btn-primary {
+  border-color: black;
+}
+.btn-check:checked + .btn-outline-primary i {
+  color: white;
+}
+
+.btn-check:checked + .btn-outline-primary {
+  background-color: black;
+  border-color: black;
+  color: white;
+}
+
+.btn-outline-primary {
+  color: black;
+  border-color: black;
+}
+
+.btn-check {
+  display: none;
+}
+
+.btn-outline-primary:hover {
+  color: #000000;
+  background-color: #69747f;
+  border-color: #506172;
+}
+
+.btn-outline-primary:active, .btn-outline-primary.active {
+  color: #fff;
+  background-color: #343a40;
+  border-color: #343a40;
+}
+.btn-check:focus + .btn-outline-primary {
+  outline: 0;
+  box-shadow: none !important;
+  background-color: #69747f;
+  border-color: #506172;
+  color: #000;
+}
 </style>
+<!-- trying to remove the blue click on buttons for feelings emojis -->
+<!-- also tyring to fix the navbar dropdowns - needs to be to the right -->
+<!-- navbar in search changes color even with the same code -->
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">
-    Catherapy
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/homepage">Catherapy</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false"><i class="bi bi-balloon-heart"></i>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="/search">Search</a>
           <a class="dropdown-item" href="/mood-tracker">Mood Tracker</a>
+          <a class="dropdown-item" href="/adopt">Adopt a Cat</a>
           <a class="dropdown-item" name="/patient-logout" href="/patient-logout"><strong>Log Out</strong></a>
         </div>
       </li>
     </ul>
   </div>
 </nav>
-<div class="row">
-  <div class="col-md-6">
-<div class="ms-3">
+</br>
+<div class="text-center">
   <h1>Welcome {{patient.first_name}}</h1>
   {% if not has_patient_submitted_feeling_today %}
   <H3>How are you feeling today?</H3>
   <form action="/add-patient-feeling-submit" method="post">
-    <div class="btn-group" role="group">
-      <input type="radio" class="btn-check" name="feeling_rating" value="1" id="btnradio1" autocomplete="off">
-      <label class="btn btn-outline-primary" for="btnradio1">😀</label>
+    <div class="btn-group"       role="group">
+      <input type="radio" class="btn-check"  name="feeling_rating" value="1" id="btnradio1" autocomplete="off">
+      <label class="btn btn-outline-primary btn-lg" for="btnradio1"><i class="bi bi-emoji-smile"></i></label>
 
       <input type="radio" class="btn-check" name="feeling_rating" value="2" id="btnradio2" autocomplete="off">
-      <label class="btn btn-outline-primary" for="btnradio2">🤪</label>
+      <label class="btn btn-outline-primary btn-lg" for="btnradio2"><i class="bi bi-emoji-sunglasses"></i></label>
 
       <input type="radio" class="btn-check" name="feeling_rating" value="3" id="btnradio3" autocomplete="off">
-      <label class="btn btn-outline-primary" for="btnradio3">🤬</label>
+      <label class="btn btn-outline-primary btn-lg" for="btnradio3"><i class="bi bi-emoji-neutral"></i></label>
 
       <input type="radio" class="btn-check" name="feeling_rating" value="4" id="btnradio4" autocomplete="off">
-      <label class="btn btn-outline-primary" for="btnradio4">😞</label>
+      <label class="btn btn-outline-primary btn-lg" for="btnradio4"> <i class="bi bi-emoji-frown"></i></label>
     </div>
     <div>
-      <button type="submit" class="btn btn-primary mt-1">Submit</button>
+      <button type="submit" class="btn btn-primary mt-1"
+        style="background-color :hsla(0, 11%, 7%, 0.992);">Submit</button>
     </div>
   </form>
   {% endif %}
 </div>
 </div>
 
-<div class="col-md-6">
+<div class="ms-3">
 <div id="patient-appt">
 
 
@@ -96,15 +143,15 @@
         </div>
       </div>
     </div>
-
+  </div>
     <input type="hidden" name="doctor_id" value="{{appointment.doctor.doctor_id}}">
     <input type="hidden" name="selected_datetime" value="{{appointment.datetime}}">
 
 
   </form>
 </div>
-  {% endfor %}
-  {% endif %}
+{% endfor %}
+{% endif %}
 </div>
 </div>
 
