Doctor update scheduled styled/ organized. Patients homepage affitmations done

--- a/templates/patient-registration.html
+++ b/templates/patient-registration.html
@@ -2,26 +2,60 @@
 {% block title %} Catherapy {% endblock %}
 
 {% block body %}
-    <h1> Patient Registration</h1>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">Catherapy <i class="fa-solid fa-paw"></i></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="card mt-5">
+      <div class="card-header">
+        <h1 class="card-title text-center">Patient Registration</h1>
+      </div>
+      <div class="card-body">
+        <form class="row g-3" action="/patient-registration-submit" method="POST">
+          <div class="col-md-6">
+            <label for="inputEmail4" class="form-label">Email</label>
+            <input type="email" class="form-control" name="email" id="inputEmail4" required>
+          </div>
+          <div class="col-md-6">
+            <label for="inputPassword4" class="form-label">Password</label>
+            <input type="password" class="form-control" name="password" id="inputPassword4" required>
+          </div>
+          <div class="col-md-6">
+            <input type="text" class="form-control"name="first_name" placeholder="First name" aria-label="First name">
+          </div>
+          <div class="col-md-6">
+            <input type="text" class="form-control"name="last_name" placeholder="Last name" aria-label="First name">
+          </div>
+          <div class="col-md-6">
+            <input type="text" class="form-control"name="phone" placeholder="Phone" aria-label="Phone">
+          </div>
+          <div class="col-12">
+            <label for="inputAddress" class="form-label">Address</label>
+            <input type="text" class="form-control" id="inputAddress" name="address" placeholder="1234 Main St" required>
+          </div>
+          <div class="col-12 d-grid">
+            <button type="submit" class="btn btn-primary btn-lg mt-3">Submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 
-    <form action="/patient-registration-submit" method="POST">
-        <p> First Name <input type="text" name="first_name">
-        </p>
-        <p> Last Name <input type="text" name="last_name">
-        </p>
-        <p> Phone <input type="text" name="phone">
-        </p>
-        <p> Address <input type="text" name="address">
-        </p>
-        <p> Email <input type="text" name="email">
-        </p>
-        <p> Password <input type="password" name="password">
-        </p>
-        
-        <p> <input type="submit">
-        </p> 
 
-
-    </form>
-
+<style>
+      .navbar-nav {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.btn-primary {
+    background-color: black;
+    border-color: black;
+}
+</style>
 {% endblock %}
