--- a/templates/doctor-registration.html
+++ b/templates/doctor-registration.html
@@ -1,45 +1,82 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 {% block title %} Catherapy {% endblock %}
-{% block head %}<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css%22%3E">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link rel="stylesheet" href="../static/style.css">  
+{% block head %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css%22%3E">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link rel="stylesheet" href="../static/style.css">
 {%endblock %}
 
 
 {% block
 body %}
-<h1>Doctor Registration</h1>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Catherapy <i class="fa-solid fa-paw"></i></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  </div>
+</nav>
 
-<div class="col-md-3">
-<form class="form-group" action="/doctor-registration-submit" method="POST" enctype="multipart/form-data">
-  <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control"name="email" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" name="password" id="exampleInputPassword1">
-    <label for="fname">First Name</label>
-    <input type="text" class="form-control" name="first_name" id="fname">
-    <label for="lname">Last Name</label>
-    <input type="text" class="form-control" name="last_name" id="lname">
-    <label for="phone1">Phone</label>
-    <input type="text" class="form-control" name="phone" id="phone1">
-    <label for="address1">Address</label>
-    <input type="text" class="form-control" name="address" id="address1">
-  <p>Photo <input type="file" name="file_input"/></p>
+<div class="container">
+  <div class="card mt-5">
+    <div class="card-header">
+      <h1 class="card-title text-center">Doctor Registration</h1>
+    </div>
+    <div class="card-body">
+      <form class="row g-3" action="/doctor-registration-submit" method="POST" enctype="multipart/form-data">
+        <div class="col-md-6">
+          <label for="inputEmail4" class="form-label">Email</label>
+          <input type="email" class="form-control" name="email" id="inputEmail4" required>
+        </div>
+        <div class="col-md-6">
+          <label for="inputPassword4" class="form-label">Password</label>
+          <input type="password" class="form-control" name="password" id="inputPassword4" required>
+        </div>
+        <div class="col-md-6">
+          <input type="text" class="form-control" name="first_name" placeholder="First name" aria-label="First name">
+        </div>
+        <div class="col-md-6">
+          <input type="text" class="form-control" name="last_name" placeholder="Last name" aria-label="First name">
+        </div>
+        <div class="col-md-6">
+          <input type="text" class="form-control" name="phone" placeholder="Phone" aria-label="Phone">
+        </div>
+        <div class="col-md-6">
+          <input type="file" name="file_input" class="form-control" id="inputGroupFile02">
+        </div>
+        <div class="col-12">
+          <label for="inputAddress" class="form-label">Address</label>
+          <input type="text" class="form-control" id="inputAddress" name="address" placeholder="1234 Main St" required>
+        </div>
+        <div class="col-12 d-grid">
+          <textarea id="bio" class="form-control" name="bio" rows="4" cols="50">Please describe yourself.</textarea>
 
-  <label for="gender">Choose a gender:</label>
-  <select name="gender" id="gender">
-    <option value="male">Male</option>
-    <option value="female">Female</option>
-    <option value="other">Other</option>
-  </select>
-
-  <p><label for="bio">Please describe yourself</label></p>
-  <textarea id="bio" class="form-control" name="bio" rows="4" cols="50"> </textarea>
-
-  {% with messages = get_flashed_messages() %} {% if messages %} {% for message
-  in messages %} {{ message }} {% endfor %} {% endif %} {% endwith %}
-  <p><input type="submit" /></p>
-</form>
+          <button type="submit" class="btn btn-primary btn-lg mt-3">Submit</button>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
 
+
+{% with messages = get_flashed_messages() %} {% if messages %} {% for message
+in messages %} {{ message }} {% endfor %} {% endif %} {% endwith %}
+
+</form>
+</div>
+<style>
+  .navbar-nav {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .btn-primary {
+    background-color: black;
+    border-color: black;
+  }
+</style>
 {% endblock %}
