--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,101 +7,177 @@
 {% block body %}
 {% if patient %}
 <style>
-  body {
-    background-image: url('../static/img/cat-home.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-
-  .btn-primary {
-    border-color: black;
-  }
-
-  .btn-check:checked+.btn-outline-primary i {
-    color: white;
-  }
-
+body {
+  overflow: hidden;
+}
   .btn-check:checked+.btn-outline-primary {
     background-color: black;
     border-color: black;
     color: white;
   }
-
-  .btn-outline-primary {
-    color: black;
-    border-color: black;
-  }
-
-  .btn-check {
-    display: none;
-  }
-
-  .btn-outline-primary:hover {
-    color: #000000;
-    background-color: #69747f;
-    border-color: #506172;
-  }
-
-  .btn-outline-primary:active,
-  .btn-outline-primary.active {
-    color: #fff;
-    background-color: #343a40;
-    border-color: #343a40;
-  }
-
-  .btn-check:focus+.btn-outline-primary {
-    outline: 0;
-    box-shadow: none !important;
-    background-color: #69747f;
-    border-color: #506172;
-    color: #000;
-  }
-
-  .navbar-nav {
-    margin-left: auto;
-  }
-
-  .dropdown-menu {
-  right: 0;
-  left: auto;
-  width: 200px;
+  .btn-check:checked + .btn-outline-primary i {
+  color: white;
 }
+
+.btn-outline-primary {
+  color: black;
+  border-color: black;
+}
+
+.btn-outline-primary:hover {
+  color: white;
+  background-color: black;
+  border-color: black;
+}
+
+.navbar-nav {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.btn-primary {
+  background-color: black;
+  border-color: black;
+  color: white;
+}
+
+.affirmation-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f1ebea;
+}
+
+.affirmation-text {
+  font-size: 36px;
+  text-align: center;
+  margin: 0;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #ffffffe4;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.card {
+  border: 2px solid #eee;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+/* Style the form container */
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+  background-color: #f7f7f7;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px #d9d9d9;
+}
+
+/* Style the form heading */
+h1, h3 {
+  margin-bottom: 10px;
+  color: #2e2e2e;
+  font-weight: bold;
+  text-align: center;
+}
+
+.feelings-group .btn-check {
+  display: none;
+}
+
+.feelings-group .btn-outline-primary.btn-lg.active i {
+  font-size: 2rem;
+}
+
+.feelings-group .btn-outline-primary.btn-lg:not(.active) i {
+  font-size: 1.5rem;
+}
+
+.feelings-submit-btn {
+  margin-top: 20px;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.feelings-submit-btn:hover {
+  background-color: white;
+  color: black;
+}
+.btn-outline-success {
+  color: rgb(0, 0, 0);
+  border-color: white;
+}
+
+.btn-outline-success:hover {
+  color: rgb(0, 0, 0);
+  background-color: rgb(0, 0, 0);
+  border-color: rgb(0, 0, 0);
+}  
+  
 </style>
-<!-- trying to remove the blue click on buttons for feelings emojis -->
+
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand mr-auto" href="/homepage">Catherapy</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="/homepage">Catherapy <i class="fa-solid fa-paw"></i></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
-    <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-      <ul class="navbar-nav ml-auto">
-
-        <li class="nav-item dropdown position-static">
-
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false"><i class="bi bi-balloon-heart"></i>
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="/search">Find Help</a>
-            <a class="dropdown-item" href="/mood-tracker">Mood Tracker</a>
-            <a class="dropdown-item" href="/adopt">Adopt a Cat</a>
-            <a class="dropdown-item" name="/patient-logout" href="/patient-logout"><strong>Log Out</strong></a>
-          </div>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/adopt">Adopt</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/search">Find Help</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/mood-tracker">Mood Tracker</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/about">About</a>
         </li>
       </ul>
+      <button onclick="window.location.href='/patient-logout'" style="background-color :hsla(0, 0%, 100%, 0.992);"
+        class="btn btn-outline-success" type="submit">Logout</button>
     </div>
+  </div>
 </nav>
+
+<div class="affirmation-container">
+  <p class="affirmation-text">{{ affirmation }}</p>
+</div>
 </br>
 <div class="text-center">
   {% if not has_patient_submitted_feeling_today %}
   <h1>Welcome {{patient.first_name}}</h1>
-  <H3>How are you feeling today?</H3>
+  <h3>How are you feeling today?</h3>
   <form action="/add-patient-feeling-submit" method="post">
-    <div class="btn-group" role="group">
+    <div class="btn-group feelings-group" role="group">
       <input type="radio" class="btn-check" name="feeling_rating" value="1" id="btnradio1" autocomplete="off">
       <label class="btn btn-outline-primary btn-lg" for="btnradio1"><i class="bi bi-emoji-smile"></i></label>
 
@@ -112,15 +188,13 @@
       <label class="btn btn-outline-primary btn-lg" for="btnradio3"><i class="bi bi-emoji-neutral"></i></label>
 
       <input type="radio" class="btn-check" name="feeling_rating" value="4" id="btnradio4" autocomplete="off">
-      <label class="btn btn-outline-primary btn-lg" for="btnradio4"> <i class="bi bi-emoji-frown"></i></label>
+      <label class="btn btn-outline-primary btn-lg" for="btnradio4"><i class="bi bi-emoji-frown"></i></label>
     </div>
     <div>
-      <button type="submit" class="btn btn-primary mt-1"
-        style="background-color :hsla(0, 11%, 7%, 0.992);">Submit</button>
+      <button type="submit" class="btn btn-primary mt-1 feelings-submit-btn">Submit</button>
     </div>
   </form>
   {% endif %}
-</div>
 </div>
 
 <div class="ms-3">
@@ -144,7 +218,7 @@
                   {{appointment.datetime.strftime('%a %b %d')}} </li>
                 <li class="list-group-item"><i class="fa-regular fa-clock fa-fw me-4"></i>Time:
                   {{appointment.datetime.strftime('%I:%M %p')}} </li>
-                <li class="list-group-item"><i class="fa-solid fa-map-pin fa-fw me-4"></i>Where:
+                <li class="list-group-item"><i class="fa-solid fa-map-pin fa-fw me-3"></i>Where:
                   {{appointment.doctor.address}}</li>
                 <li class="list-group-item"><i class="fa-regular fa-user fa-fw me-4"></i>With:
                   {{appointment.doctor.first_name}} {{appointment.doctor.last_name}}</li>
@@ -164,10 +238,20 @@
   </form>
 </div>
 {% endfor %}
+{% else %}
+<div id="schedule-btn" class="my-5">
+  <h1 class="mb-4">You have no upcoming appointments</h1>
+  <button onclick="window.location.href='/search'" class="btn btn-primary">Schedule Appointment</button>
+</div>
 {% endif %}
 </div>
 </div>
 
 </div>
 {% endif %}
+<script>
+  document.getElementById('schedule-btn').addEventListener('click', function () {
+    window.location.href = '/search';
+  });
+</script>
 {% endblock %}
